--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,21 +1,14 @@
-name: DevOpsLab Pipeline
+# Use uma Imagem Official do Python
+FROM python:3
 
-on:
-  push:
-    branches:
-      - main
+# Definindo o diretório onde a aplicação será armazenada
+WORKDIR /app
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+# Copiar os arquivos da pasta local para dentro do container
+COPY . /app
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+# Instalar as dependências de Python de acordo com o que foi desenvolvido na aplicação e que está declarado no arquivo requirements.txt.
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t my-image .
-          docker push my-image
+# Garante que será iniciado a aplicação.
+CMD ["gunicorn", "app:app"]
